logs/gocept.selenium.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/gocept'...
Listing './lib/python3.5/site-packages/gocept/httpserverlayer'...
Listing './lib/python3.5/site-packages/gocept/httpserverlayer/custom'...
Listing './lib/python3.5/site-packages/gocept/httpserverlayer/plonetestingz2'...
Listing './lib/python3.5/site-packages/gocept/httpserverlayer/plonetestingz2/tests'...
Listing './lib/python3.5/site-packages/gocept/httpserverlayer/plonetestingz2/tests/zope2'...
Listing './lib/python3.5/site-packages/gocept/httpserverlayer/static'...
Listing './lib/python3.5/site-packages/gocept/httpserverlayer/static/tests'...
Listing './lib/python3.5/site-packages/gocept/httpserverlayer/tests'...
Listing './lib/python3.5/site-packages/gocept/httpserverlayer/tests/isolation'...
Listing './lib/python3.5/site-packages/gocept/httpserverlayer/wsgi'...
Listing './lib/python3.5/site-packages/gocept/httpserverlayer/zopeappwsgi'...
Listing './lib/python3.5/site-packages/gocept/selenium'...
Listing './lib/python3.5/site-packages/gocept/selenium/grok'...
Listing './lib/python3.5/site-packages/gocept/selenium/plonetesting'...
Listing './lib/python3.5/site-packages/gocept/selenium/plonetesting/tests'...
Listing './lib/python3.5/site-packages/gocept/selenium/plonetesting/tests/zope2'...
Listing './lib/python3.5/site-packages/gocept/selenium/scripts'...
Compiling './lib/python3.5/site-packages/gocept/selenium/scripts/converthtmltests.py'...
***   File "./lib/python3.5/site-packages/gocept/selenium/scripts/converthtmltests.py", line 131
    print "Parsing [%s]" % filename
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gocept/selenium/scripts/tests'...
Compiling './lib/python3.5/site-packages/gocept/selenium/selenese.py'...
***   File "./lib/python3.5/site-packages/gocept/selenium/selenese.py", line 776
    except self.failureException, e:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gocept/selenium/seleniumrc.py'...
***   File "./lib/python3.5/site-packages/gocept/selenium/seleniumrc.py", line 50
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gocept/selenium/static'...
Listing './lib/python3.5/site-packages/gocept/selenium/tests'...
Listing './lib/python3.5/site-packages/gocept/selenium/tests/fixture'...
Listing './lib/python3.5/site-packages/gocept/selenium/tests/isolation'...
Listing './lib/python3.5/site-packages/gocept/selenium/tests/screenshot_directory'...
Compiling './lib/python3.5/site-packages/gocept/selenium/tests/test_selenese.py'...
***   File "./lib/python3.5/site-packages/gocept/selenium/tests/test_selenese.py", line 92
    except error, e:
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gocept/selenium/tests/test_seleniumrc.py'...
***   File "./lib/python3.5/site-packages/gocept/selenium/tests/test_seleniumrc.py", line 27
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gocept/selenium/wd_selenese.py'...
***   File "./lib/python3.5/site-packages/gocept/selenium/wd_selenese.py", line 182
    NoSuchElementException), e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gocept/selenium/webdriver.py'...
***   File "./lib/python3.5/site-packages/gocept/selenium/webdriver.py", line 97
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gocept/selenium/wsgi'...
Listing './lib/python3.5/site-packages/gocept.httpserverlayer-2.2.egg-info'...
Listing './lib/python3.5/site-packages/gocept.selenium-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/httpagentparser'...
Listing './lib/python3.5/site-packages/httpagentparser-1.8.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plone'...
Listing './lib/python3.5/site-packages/plone/testing'...
Listing './lib/python3.5/site-packages/plone.testing-5.1.1.egg-info'...
Listing './lib/python3.5/site-packages/selenium'...
Listing './lib/python3.5/site-packages/selenium/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver'...
Listing './lib/python3.5/site-packages/selenium/webdriver/android'...
Listing './lib/python3.5/site-packages/selenium/webdriver/blackberry'...
Listing './lib/python3.5/site-packages/selenium/webdriver/chrome'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/html5'...
Listing './lib/python3.5/site-packages/selenium/webdriver/edge'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/amd64'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/x86'...
Listing './lib/python3.5/site-packages/selenium/webdriver/ie'...
Listing './lib/python3.5/site-packages/selenium/webdriver/opera'...
Listing './lib/python3.5/site-packages/selenium/webdriver/phantomjs'...
Listing './lib/python3.5/site-packages/selenium/webdriver/remote'...
Listing './lib/python3.5/site-packages/selenium/webdriver/safari'...
Listing './lib/python3.5/site-packages/selenium/webdriver/support'...
Listing './lib/python3.5/site-packages/selenium-2.53.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/testing'...
Listing './lib/python3.5/site-packages/zope.testing-4.6.2.dist-info'...
Listing './selenium'...
Listing './selenium/webdriver'...
Listing './selenium/webdriver/firefox'...
Listing './selenium/webdriver/firefox/amd64'...
Listing './selenium/webdriver/firefox/x86'...
Listing './share'...
Listing './share/python-wheels'...
